--- a/src/app/pages/client-page/client-page.component.html
+++ b/src/app/pages/client-page/client-page.component.html
@@ -7,68 +7,111 @@
         ></app-search-bar>
         <app-client-table></app-client-table>
           <!--Modal agregar productos-->
-      <dialog #modal id="modal" class="modal w-3/5 bg-gray-100 open:flex relative flex-col items-center justify-between rounded-xl ">
-        <p class="text-2xl font-bold text-center m-9">Agregar cliente</p>
+      <dialog #modal id="modal" class="modal 2xl:w-3/5 bg-gray-100 open:flex relative flex-col items-center justify-between rounded-xl pt-0">
+        <p class="xl:text-xl 2xl:text-2xl font-bold text-center 2xl:m-9 xl:m-6">Agregar cliente</p>
         <form action="" method="dialog">
-            <div  class=" grid grid-cols-3 grid-rows-4 gap-6 h-4/6 ">
+            <div  class=" flex flex-col  2xl:gap-6 xl:gap-2 h-1/2 ">
 
-                <div class="flex flex-col ">
-                  <label for="">Id: </label>
-                  <input type="number" class="rounded-lg bg-stone-200 shadow-sm" [disabled]="true" placeholder="CLI-39201">
+              <div class="flex"> 
+                <div class="w-1/3 2xl:mb-2 px-3 xl:mb-0">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full" for="grid-first-name">
+                      ID
+                    </label> 
+                    <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="CLI-8761" disabled>
+                    
+                  </div>
+
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-2 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name xl:text-sm">
+                      Nombre o razon social
+                    </label>
+                    <input class="xl:text-sm xl:h-9 xl:mb-2 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="Jane">
+                    <!-- <p class="text-red-500 text-xs italic">Por favor complete este campo.</p> -->
+                  </div>
+
                 </div>
-                <div class="flex flex-col ">
-                  <label for="">Nombre o razon social: </label>
-                  <input type="URL" class="rounded-lg bg-stone-200 shadow-sm">
+                <div class="flex items-end">
+                  <div class="w-full  px-3 xl:mb-0 2xl:mb-2  rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="tipoDocumento">Tipo de documento: </label>
+                    <select name="tipoDocumento" id="tipoDocumento" class="xl:text-sm pt-1.5 xl:h-9 cursor-pointer w-full bg-gray-200 text-black border rounded py-3 px-4 mb-3 focus:outline-none focus:bg-white">
+                      <option class="text-sm" selected value="Cedula">Cedula</option>
+                      <option class="text-sm" value="Pasaporte" >Pasaporte</option>
+                      <option class="text-sm" value="Licencia" >Licencia</option>
+                    </select>
+                  </div>
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
+                      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                        Numero de documento:
+                      </label>
+                      <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="number" placeholder="402-4778895-6">
+                     
+                  </div>
+               
+                  <div class="flex flex-col xl:mb-0w-full">
+
+                    <div class="flex items-center 2xl:mb-2 pl-3">
+                      <input id="default-checkbox" type="checkbox" value="" class="xl:text-sm xl:h-9 w-4  h-4 bg-lime-500  rounded border-lime-300 focus:border-lime-500 dark:focus:to-lime-300 dark:border-b-lime-500 focus:ring-2 dark:border-lime-600">
+                      <label for="default-checkbox" class="ml-2 block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">Comprobante fiscal</label>
+                    </div>
+  
+  
+                      <div class="w-full 2xl:mb-2 px-3 rounded">
+                          
+                          <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="B-0987654321-2">
+                    
+                        </div>
+                  </div>
                 </div>
-                <div class="flex flex-col">
-                  <label for="tipoDocumento">Select Tipo de documento: </label>
-                  <select name="tipoDocumento" id="tipoDocumento">
-                    <option value="Seleccione un documento" disabled></option>
-                    <option value="Cedula"></option>
-                    <option value="Pasaporte" ></option>
-                    <option value="Licencia" ></option>
-                  </select>
+                <div class="flex">
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                      Correo:
+                    </label>
+                    <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="correo@email.com">
+                    
+                  </div>
+                  
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                      Telefono:
+                    </label>
+                    <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="tel" placeholder="809-457-8978">
+                
+                  </div>
+  
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                      Celular:
+                    </label>
+                    <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="tel" placeholder="829-805-8311">
+                 
+                  </div>
                 </div>
-                <div class="flex flex-col ">
-                  <label for="">Numero de documento: </label>
-                  <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
+                <div class="flex gap-6">
+
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                      Direccion:
+                    </label>
+                    <textarea class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="tel" placeholder=""></textarea>
+            
+                  </div>
+                  <div class="w-full  px-3 2xl:mb-2 xl:mb-0 mrounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                      Comentario:
+                    </label>
+                    <textarea class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder=""></textarea>
+            
+                  </div>
                 </div>
-                <div class="flex flex-col ">
-                  <label for="">Check box Comprobante fiscal: </label>
-                  <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-                </div>
-                <div class="flex flex-col ">
-                  <label for="">Numero de comprobante fiscal: </label>
-                  <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-                </div>
-                <div class="flex flex-col ">
-                  <label for="">Correo: </label>
-                  <input type="email" class="rounded-lg bg-stone-200 shadow-sm">
-                </div>
-                <div class="flex flex-col ">
-                  <label for="">Telefono: </label>
-                  <input type="tel" class="rounded-lg bg-stone-200 shadow-sm">
-                </div>
-                <div class="flex flex-col ">
-                  <label for="">Celular: </label>
-                  <input type="tel" class="rounded-lg bg-stone-200 shadow-sm">
-                </div>
-                <div class="flex flex-col ">
-                  <label for="">Direccion: </label>
-                  <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-                </div>
-                <div class="flex flex-col ">
-                  <label for="">Comentario: </label>
-                  <textarea class="rounded-lg bg-stone-200 shadow-md outline-none p-2"></textarea>
-                </div>
+              
             </div>
             <div class="flex justify-center gap-16">
-                <button type="submit" class="mt-9 bg-lime-600 flex items-center justify-center h-12 w-1/5 p-4 rounded-xl shadow-lg hover:bg-lime-700  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300">Submit</button>
-                <button (click)="closeModal()" class="mt-9 bg-red-500 flex items-center justify-center h-12 w-1/5  p-4 rounded-xl shadow-lg hover:bg-red-600  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300 ">Close</button>
+                <button type="submit" class="mt-5 bg-lime-600 flex items-center justify-center 2xl:h-12 xl:h-10 w-1/4 p-4 rounded-xl shadow-lg hover:bg-lime-700  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300">Submit</button>
+                <button (click)="closeModal()" class="mt-5 bg-red-500 flex items-center justify-center 2xl:h-12 xl:h-10 w-1/4  p-4 rounded-xl shadow-lg hover:bg-red-600  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300 ">Close</button>
             </div>
         </form>
-        <div class="mt-10 w-full flex justify-between px-16">
-        </div>
+       
       </dialog>
     </div>
 </div>
