--- a/src/app/pages/bill-page/bill-page.component.html
+++ b/src/app/pages/bill-page/bill-page.component.html
@@ -3,8 +3,103 @@
     <div class="flex flex-col w-full ml-10">
         <p class="m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Bills</p>
         <app-search-bar
-        [direccion]="ruta"
+        (enviarProductoABuscar)="buscarProducto($event)"
         ></app-search-bar>
-        <app-bill-table></app-bill-table>
+        <app-products [productFilter]="info"></app-products>
+    </div>
+    <div class="w-2/5 h-min-screen bg-gray-100 relative flex flex-col  py-5">
+        <div class="w-full h-1/6 flex flex-col justify-evenly pl-4">  
+            
+                <div class="flex">
+                    <label class="toggler-wrapper style-1">
+                        <input type="checkbox" >
+                        <div class="toggler-slider">
+                          <div class="toggler-knob"></div>
+                        </div>
+                      </label>
+                      <label for="" class="ml-2 text-lg leading-tight ">Cliente</label>
+                </div>
+                <div class="flex">
+                    <label class="toggler-wrapper style-1">
+                        <input type="checkbox" >
+                        <div class="toggler-slider">
+                          <div class="toggler-knob"></div>
+                        </div>
+                      </label>
+                      <label for="" class="ml-2 text-lg leading-tight ">Credito</label>
+                </div>
+            
+            <div class="flex">
+                <label class="toggler-wrapper style-1">
+                    <input type="checkbox" >
+                    <div class="toggler-slider">
+                      <div class="toggler-knob"></div>
+                    </div>
+                  </label>
+                  <label for="" class="ml-2 text-lg leading-tight ">Descuento</label>
+            </div>
+           
+        </div>
+        <div class=" w-full h-1/2  bg-neutral-100 p-5 flex flex-col justify-between">
+            <div class="w-full h-72 flex flex-col justify-evenly">
+                <div class="flex justify-between">
+                    <div class="flex justify-between w-1/6">
+                        <p>-</p>
+                        <p>1 </p>
+                    </div>
+                    <p>Pollo con platano maduro </p>
+                </div>
+                <div class="flex justify-between">
+                    <div class="flex justify-between w-1/6">
+                        <p>-</p>
+                        <p>1 </p>
+                    </div>
+                    <p>Pollo con platano maduro </p>
+                </div>
+                <div class="flex justify-between">
+                    <div class="flex justify-between w-1/6">
+                        <p>-</p>
+                        <p>1 </p>
+                    </div>
+                    <p>Pollo con platano maduro </p>
+                </div>
+                <div class="flex justify-between">
+                    <div class="flex justify-between w-1/6">
+                        <p>-</p>
+                        <p>1 </p>
+                    </div>
+                    <p>Pollo con platano maduro </p>
+                </div>
+                <div class="flex justify-between">
+                    <div class="flex justify-between w-1/6">
+                        <p>-</p>
+                        <p>1 </p>
+                    </div>
+                    <p>Pollo con platano maduro </p>
+                </div>
+            </div>
+            <div class="w-full  border-t-5 border-t border-slate-900">
+                <div class="flex w-full justify-between">
+                    <p>subtotal:</p>
+                    <p>$490</p>
+                </div>
+                <div class="flex w-full justify-between">
+                    <p>itbis:</p>
+                    <p>$10</p>
+                </div>
+                <div class="flex w-full justify-between">
+                    <p>total:</p>
+                    <p>$500</p>
+                </div>
+            </div>
+        </div>
+        <div class=" w-full p-5 flex flex-col items-center">
+            <div class=" w-full flex justify-around px-3">
+
+                <button type="submit" class="mt-3 bg-lime-600 flex items-center justify-center h-8  p-6 rounded-sm shadow-lg ">Efectivo</button>
+                <button type="submit" class="mt-3 bg-amber-400 flex items-center justify-center h-8  p-6 rounded-sm shadow-lg ">Tarjeta</button>
+            </div>
+            <button type="submit" class="mt-3 bg-cyan-400 flex items-center justify-center h-8  p-6 rounded-sm shadow-lg ">Transferencia</button>
+        </div>
     </div>
 </div>
