--- a/src/app/pages/product-page/product-page.component.html
+++ b/src/app/pages/product-page/product-page.component.html
@@ -10,47 +10,98 @@
       ></app-search-bar>
       <app-products [productFilter]="info"></app-products>
       </div>
-      <!--Modal agregar productos-->
-      <dialog #modal id="modal" class="modal h-96 w-2/5 bg-gray-100 open:flex relative flex-col items-center justify-between rounded-xl ">
-        <p class="text-xl text-center">Agregar Producto</p>
-        <form action="" method="dialog" class=" grid grid-cols-2 grid-rows-4 gap-14 h-4/6 ">
-          <div class="flex flex-col ">
-            <label for="">Id: </label>
-            <input type="number" class="rounded-lg bg-stone-200 shadow-sm" [disabled]="true">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Imagen: </label>
-            <input type="URL" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Nombre del producto: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Categoria: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Precio de compra: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Precio de venta: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Descripcion producto: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Ganancia: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <button type="submit" class="mt-3 bg-lime-600 flex items-center justify-center h-8  p-4 rounded-xl shadow-lg ">Submit</button>
-          <button (click)="closeModal()" class="mt-3 bg-red-500 flex items-center justify-center h-8  p-4 rounded-xl shadow-lg ">Close</button>
+       <!--Modal agregar productos-->
+       <dialog #modal id="modal" class="modal 2xl:w-3/5 bg-gray-100 open:flex relative flex-col items-center justify-between rounded-xl pt-0">
+        <p class="xl:text-xl 2xl:text-2xl font-bold text-center 2xl:m-9 xl:m-6">Agregar producto</p>
+        <form action="" method="dialog">
+            <div  class=" flex flex-col  2xl:gap-6 xl:gap-2 h-1/2 ">
+
+              <div class="flex"> 
+                <div class="w-1/3 2xl:mb-2 px-3 xl:mb-0">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-full" for="grid-first-name">
+                      ID
+                    </label> 
+                    <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="PDT-8761" disabled>
+                    
+                  </div>
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                      Nombre del producto:
+                    </label>
+                    <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="Producto A">
+                    
+                  </div>
+
+                 
+                  <div class="w-full  px-3 xl:mb-0 2xl:mb-2  rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="tipoDocumento">Categoria: </label>
+                    <select name="tipoDocumento" id="tipoDocumento" class="xl:text-sm pt-1.5 xl:h-9 cursor-pointer w-full bg-gray-200 text-black border rounded py-3 px-4 mb-3 focus:outline-none focus:bg-white">
+                      <option class="text-sm" selected value="Productos del hogar">Productos del hogar</option>
+                      <option class="text-sm" value="Productos de salud" >Productos de salud</option>
+                      <option class="text-sm" value="Productos de belleza" >Productos de belleza</option>
+                    </select>
+                  </div>
+
+                </div>
+                <div class="flex items-end">
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                      Cantidad:
+                      <i data-tooltip-target="tooltip-default" class="fa-solid fa-circle-info relative" style="color: orange;"></i>
+                        <div id="tooltip-default" role="tooltip" class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
+                          Ingrese la cantidad que va a almacenar en el inventario
+                          <div class="tooltip-arrow" data-popper-arrow></div>
+                      </div>
+                    </label>
+                    <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="number" placeholder="1">
+                   
+                </div>
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
+                      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                        Precio de compra:
+                      </label>
+                      <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="number" placeholder="400">
+                     
+                  </div>
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                      Precio de venta:
+                    </label>
+                    <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="number" placeholder="875">
+                   
+                </div>
+                <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
+                  <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                    Ganancia:
+                  </label>
+                  <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="number" placeholder="475">
+                </div> 
+              </div>
+                <div class="flex">
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-2 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name xl:text-sm">
+                      Seleccione una imagen
+                    </label>
+                    
+                  </div>
+                  
+                  
+                  <div class="w-full 2xl:mb-2 xl:mb-0 px-3 rounded">
+                    <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
+                      Descripcion del producto:
+                    </label>
+                    <textarea class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="tel" placeholder=""></textarea>
+            
+                  </div>
+                </div>
+              
+            </div>
+            <div class="flex justify-center gap-16">
+                <button type="submit" class="mt-5 bg-lime-600 flex items-center justify-center 2xl:h-12 xl:h-10 w-1/4 p-4 rounded-xl shadow-lg hover:bg-lime-700  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300">Submit</button>
+                <button (click)="closeModal()" class="mt-5 bg-red-500 flex items-center justify-center 2xl:h-12 xl:h-10 w-1/4  p-4 rounded-xl shadow-lg hover:bg-red-600  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300 ">Close</button>
+            </div>
         </form>
-        <div class="mt-10 w-full flex justify-between px-16">
-        </div>
+       
       </dialog>
 </div>  
 
