--- a/src/app/components/c-signup/c-signup.component.html
+++ b/src/app/components/c-signup/c-signup.component.html
@@ -1,60 +1,34 @@
 
-    <div class="md:float-left h-1/2 md:min-h-screen w-1/2 bg-gradient-to-b	from-lime-500 to-stone-100">
-      <div class="login-form flex flex-col justify-center items-center w-full	gap-y-8	 min-h-screen	">
+<div class="flex containeres h-screen w-screen">
+  <div class="relative modal 2xl:w-3/5 xl:w-4/5 bg-gray-100 open:flex flex-col items-center justify-center rounded-xl pt-0 h-1/2">
+      <div class="w-1/2">
         <h1 class="text-2xl md:text-3xl font-bold mb-5">Regístrate</h1>
-        <p>¿Ya tienes una cuenta?
-         <span class="font-bold">Iniciar sesión</span></p>
-
-        <div class="flex flex-col justify-center items-center w-2/5 border-4">
-          
+        <p>¿Ya tienes una cuenta? <span class="font-bold">Iniciar sesión</span></p>
           <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
-            <label
-              class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2"
-              for="grid-first-name"
-            >
-              Email
-            </label>
-            <input
-              class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
-              id="grid-first-name"
-              type="text"
-              placeholder="Ingrese su correo"
-            />
+          <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+                  Email
+          </label>
+          <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="Ingrese su correo"/>
           </div>
-          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
-            <label
-            class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2"
-              for="grid-first-name"
-            >
-            Contraseña:
-            </label>
-            <input
-              class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
-              id="grid-first-name"
-              type="text"
-              placeholder="Ingrese su contraseña"
-            />
-          </div>
-          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
-            <label
-            class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2"
-              for="grid-first-name"
-            >
-              Repita su contraseña:
-            </label>
-            <input
-              class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
-              id="grid-first-name"
-              type="text"
-              placeholder="Repita su contraseña"
-            />
 
+          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
+          <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+                Contraseña: 
+          </label>
+          <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="Ingrese su contraseña"/>
+          </div>
+
+          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 rounded">
+          <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+                  Repita su contraseña:
+          </label>
+          <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="text" placeholder="Repita su contraseña"/>
           </div> 
-          <a routerLink="/sign-up"> 
-            <button class="mt-10 bg-lime-600 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-lime-700  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300">
-            Regístrate</button>
-          </a>
-        </div>
-        </div>
-    </div>
 
+          </div>
+            <a routerLink="/sign-up"> 
+              <button class="mt-10 bg-lime-600 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-lime-700  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300">
+              Regístrate</button>
+            </a>
+          </div> 
+</div>
