--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,2 +1,48 @@
-<app-c-signup></app-c-signup>
-<app-entry-bg></app-entry-bg>
+
+<div class="flex containeres h-screen w-screen">
+    <!--Efecto blur y centralizacion  del modal-->
+    <div class="flex justify-center items-center w-full h-full _filter">
+        <!--Modal-->
+        <div class="flex 2xl:w-3/5 xl:w-4/6 h-2/3 rounded-2xl">
+
+        <!--Lado izquierdo del modal (titulo de billFast Lite)-->
+        <div class="justify-center h-full w-1/2 rounded-l-2xl bg-lime-500 opacity-80">
+            <div class="h-full w-full bg-black/10 grid place-content-center">
+                <h1 class="text-white text-4xl font-bold m">BillFast Lite</h1>
+              </div>
+        </div>
+        <!--Lado derecho del modal (Formulario de registro-->
+        <div class="flex flex-col justify-center h-full w-1/2 rounded-r-2xl bg-stone-100 opacity-80 ">
+            <div class="flex flex-col w-full 2xl:mb-2 xl:mb-0 px-3 mb-6 items-center content-center">
+                <h1 class="text-gray-700 xl:text-2xl font-bold my-5">Regístrate</h1>
+                <p>¿Ya tienes una cuenta? <span class="font-bold text-gray-700"><a routerLink="/log-in">Inicia sesión</a></span></p>
+            </div>
+            <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
+            <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+                  Email
+            </label>
+            <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="email" placeholder="Ingrese su correo"/>
+            </div>
+
+            <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
+            <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+                Contraseña: 
+            </label>
+            <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="password" placeholder="Ingrese su contraseña"/>
+            </div>
+
+            <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
+            <label class="block uppercae tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
+                  Repita su contraseña:
+            </label>
+            <input class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="password" placeholder="Repita su contraseña"/>
+            </div> 
+            <div class="flex justify-center items-center w-full">
+                <a routerLink="/sign-up"> 
+                    <button class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500  text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3">
+                    Regístrate</button>
+                </a>
+            </div>
+            </div>
+        </div> 
+</div>
